# nvim

./: README.md  cq_bmpToPng.py  global.json  init.lua
lua/: audocmd.lua  basic.lua  colorscheme.lua  cqFunction.lua  keybindings.lua  plugins.lua  utils.lua
lua/lsp/: cmp.lua  setup.lua  ui.lua
lua/lsp/config/: c_sharp.lua  cmake.lua  cpp.lua  json.lua  lua.lua  python.lua
lua/plugin-config/: .markdown-preview  aerial.lua  autopairs.lua  bufferline.lua  clipboard-image.lua  comment.lua  dashboard.lua  diffview.lua  gitsigns.lua  hop.lua  lualine.lua  mkdnflow.lua  neovim-cmake.lua  neovim-session-manager.lua  nvim-gdb.lua  nvim-tree.lua  nvim-treesitter.lua  sniprun.lua  telescope.lua  toggleterm.lua  vim-illuminate.lua  which-key.lua
plugin/: packer_compiled.lua
samples/C++ project/: .gitignore  CMakeLists.txt
samples/C++ project/lib/: CMakeLists.txt
samples/C++ project/lib/tools/: test.cpp  test.h
samples/C++ project/src/: CMakeLists.txt
samples/C++ project/src/main/: CMakeLists.txt  main.cpp
snippet/: c.json  cpp.json  global.json
